--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -601,7 +601,7 @@ That's right, you've already built a working Automerge-backed React app with liv
 
 ### Collaborating over the internet
 
-In addition to syncing changes locally, changes to an Automerge Repo can be synced with other remote users by configuring a suitable NetworkAdapter, e.g. `BrowserWebSocketClientAdapter`. Mutliple network adapters can be configured for the same Repo, so that e.g. local sync will continue working even if the network is unavailable. 
+In addition to syncing changes locally, changes to an Automerge Repo can be synced with other remote users by configuring a suitable NetworkAdapter, e.g. `BrowserWebSocketClientAdapter`. Multiple network adapters can be configured for the same Repo, so that e.g. local sync will continue working even if the network is unavailable. 
 
 <Exercise>
 
