--- a/docs/cookbook/codemirror-markdown-editor.mdx
+++ b/docs/cookbook/codemirror-markdown-editor.mdx
@@ -27,7 +27,7 @@ In another terminal let's start the vite dev server
 npm run dev
 ```
 
-Now if we go to `localhost:5173` we'll see the Automerge demo page which `create-repo-app` has generated. If you look in `src/main.rs` you'll see that the example application:
+Now if we go to `localhost:5173` we'll see the Automerge demo page which `create-repo-app` has generated. If you look in `src/main.tsx` you'll see that the example application:
 
 * Sets up a `Repo` which uses IndexedDB to store data
 * Syncs via websockets with `wss://sync.automerge.org`
