addresses more typos

--- a/docs/tutorial/07-multiple-task-lists.mdx
+++ b/docs/tutorial/07-multiple-task-lists.mdx
@@ -23,7 +23,7 @@ Here's the plan. We are going to:
 3. Store the root document's ID in localStorage in a well-known key to check during startup.
 4. Create a simple UI for copying the root document between browsers, creating rudimentary "accounts".
 
-If this feels different to you from how a traditional database works, that's normal. With Automerge, building an application will eel more like linking together a web of documents than querying a database.
+If this feels different to you from how a traditional database works, that's normal. With Automerge, building an application will feel more like linking together a web of documents than querying a database.
 
 
 ## Create a root document
