--- a/docs/tutorial/07-multiple-task-lists.mdx
+++ b/docs/tutorial/07-multiple-task-lists.mdx
@@ -9,7 +9,7 @@ import Solution from "../components/Solution";
 
 You might have noticed that if you lose the URL of a task list, it's gone forever. This is fine for testing and demos, but obviously no good for a real application.
 
-Automerge is built around the document as a building block for your application, and we use `AutomergeUrl` links to connect those ocuments together. We've already created one kind of document, a task list, and now we're going to build on that foundation by collecting your task lists into something like a folder to keep them organized.
+Automerge is built around the document as a building block for your application, and we use `AutomergeUrl` links to connect those documents together. We've already created one kind of document, a task list, and now we're going to build on that foundation by collecting your task lists into something like a folder to keep them organized.
 
 This is going to give us a chance to see a few patterns in action: linking between documents with URLs, working with multiple documents at once, and using a single document as the "entry point" for your application.
 
@@ -23,7 +23,7 @@ Here's the plan. We are going to:
 3. Store the root document's ID in localStorage in a well-known key to check during startup.
 4. Create a simple UI for copying the root document between browsers, creating rudimentary "accounts".
 
-If this feels different to you from how a traditional database works, that's normal. With Automerge, building an application will eel more like linking together a web of documents than querying a database.
+If this feels different to you from how a traditional database works, that's normal. With Automerge, building an application will feel more like linking together a web of documents than querying a database.
 
 
 ## Create a root document
