--- a/docs/tutorial/05-react.mdx
+++ b/docs/tutorial/05-react.mdx
@@ -157,7 +157,7 @@ export const TaskList: React.FC<{
   // highlight-start
   const [doc, changeDoc] = useDocument<TaskList>(docUrl, {
     // This hooks the `useDocument` into reacts suspense infrastructure so the whole component
-    // only renderes once the document is loaded
+    // only renders once the document is loaded
     suspense: true,
   });
 
@@ -238,16 +238,16 @@ export const TaskList: React.FC<{
     <>
       <button
         type="button"
+        // highlight-start
         onClick={() => {
-          // highlight-start
           changeDoc((d) =>
             d.tasks.unshift({
               title: "",
               done: false,
             }),
           );
-          // highlight-end
         }}
+        // highlight-end
       >
         <b>+</b> New task
       </button>
